--- a/app/views/apps/edit.html.erb
+++ b/app/views/apps/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing App</h1>
+<div class="container">
+    <h1>Editing App</h1>
 
-<%= render 'form', app: @app %>
+    <%= render 'form', app: @app %>
 
-<%= link_to 'Show', @app %> |
-<%= link_to 'Back', apps_path %>
+    <%= link_to 'Show', app_path(uid: @app.uid) %> |
+</div>
