--- a/app/views/votes/result.html.erb
+++ b/app/views/votes/result.html.erb
@@ -1,2 +1,33 @@
-<h1>Votes#result</h1>
-<p>Find me in app/views/votes/result.html.erb</p>
+<head>
+  <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+</head>
+
+<h1>投票結果</h1>
+
+
+<%# .joins(:app) %>
+<%= bar_chart App.order("count DESC").group(:name).sum(:count), width: "100%", height: "800px" %>
+
+<table class = "table">
+  <thead>
+    <tr>
+      <th>アプリ名</th>
+      <th>チーム名</th>
+      <th>投票数</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @apps.order("count DESC").each do |app| %>
+    <%# <% @app.joins(:vote).order("counter DESC").each do |application| %>
+      <thead>
+      <tr>
+        <td><%= app.name %></td>
+        <td><%= app.team_name %></td>
+        <td class="number"><%= app.count %></td>
+      </tr>
+      </thead>
+    <% end %>
+  </tbody>
+</table>
