イメージ画像追加

--- a/app/views/apps/_form.html.erb
+++ b/app/views/apps/_form.html.erb
@@ -11,6 +11,13 @@
     </div>
   <% end %>
 
+<div>
+  <p>アプリでの表示イメージは以下になリます。squea画像が1番左のリスト表示際に表示される画像です。タップされると詳細ページに飛び、以下の真ん中の画像のようにページ中央にimage0〜image3の画像が表示されます。その下に1番右の画像のように概要と特徴の文章が表示されます。</p>
+  <img src="/images/List.png" alt="リスト" height=500>
+  <img src="/images/Detail1.png" alt="リスト" height=500>
+  <img src="/images/Detail2.png" alt="リスト" height=500>
+</div>
+
   <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name, id: :app_name, class: "form-control" %>
